III.1. Display a simple joke
Signed-off-by: Pierre-Mollard <pierre.mollard19@orange.fr>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Chuck Norris Joke</string>
+    <string name="bt_name_addjoke">New Joke</string>
 </resources>
