IV.2. Custom Joke View
Signed-off-by: Pierre-Mollard <pierre.mollard19@orange.fr>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Chuck Norris Joke</string>
     <string name="bt_name_addjoke">New Joke</string>
+    <string name="descr_star">Add this joke to your favorite list</string>
+    <string name="descr_share">Share this joke on social media</string>
 </resources>
